# alpha-agents-a2a

./: .gitignore  README.md
agents/: _working_freeze.txt  pyproject.toml
agents/fundamental-agent/: .env.example  .gitignore  README.md  fundamental-agent-card.json  pyproject.toml  requirements.txt  test_client.py
agents/fundamental-agent/src/fundamental_agent/: __init__.py  agent.py  main.py  manual_executor.py  server.py  tools.py
agents/groupchat-agent/: .env.example  .gitignore  DEBATE_IMPLEMENTATION.md  README.md  debate_demo.py  groupchat-agent-card.json  pyproject.toml  requirements.txt
agents/groupchat-agent/src/groupchat_agent/: __init__.py  __main__.py  a2a_agent.py  batch_analyser.py  registry_service.py  server.py  test_client.py
agents/sentiment-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sentiment-agent-card.json  test_client.py
agents/sentiment-agent/src/sentiment_agent/: __init__.py  agent.py  main.py  server.py  tools.py
agents/valuation-agent/: .env.example  README.md  example_requests.json  pyproject.toml  quick_test.py  requirements.txt  test_client.py  valuation-agent-card.json
agents/valuation-agent/src/valuation_agent/: __init__.py  agent.py  main.py  server.py  tools.py
agents/valuation-agent/tests/: __init__.py  test_tools.py
