[project]
name = "alpha_agents"
version = "0.1.0"
description = "Perform portfolio analysis and support stock selection using high specialized agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "google-adk>=1.7.0",
    "gradio>=5.30.0",
    "langchain-openai>=0.3.32,<0.4.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.5.0",
    "a2a-sdk>=0.3.0",
    "litellm",
]
